--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/12/2020 01:04:00 PM</p>
+    <p class="lastupdate">09/12/2020 01:09:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">87.7&#176;F</td>
+        <td class="data">88.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">87.7&#176;F</td>
+        <td class="data">88.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">87.7&#176;F</td>
+        <td class="data">88.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">48.5&#176;F</td>
+        <td class="data">48.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.883 inHg (-0.082)</td>
+        <td class="data">29.880 inHg (-0.083)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph S (180&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">72.3&#176;F</td>
+        <td class="data">72.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="01:03:22 PM">
-            87.7</span><br/>
+          <span title="01:07:28 PM">
+            88.0</span><br/>
           <span title="07:15:43 AM">
             45.6</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="01:03:22 PM" class="hival">
-            87.7</span>
+          <span title="01:07:28 PM" class="hival">
+            88.0</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)" class="hival">
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="09:16:01 AM">
             29.972</span><br/>
-          <span title="01:02:02 PM">
-            29.883</span>
+          <span title="01:08:02 PM">
+            29.880</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:56:01 AM (Friday)">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          130
+          129
         </td>
         <td class="data new_row hilo_week">
           0<br/>
@@ -448,7 +448,7 @@
         </td>
         <td class="data new_row hilo_month">
           0<br/>
-          342
+          343
         </td>
         <td class="data new_row hilo_year">
           2<br/>
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="01:00:02 PM">
-            72.3</span><br/>
+          <span title="01:06:02 PM">
+            72.4</span><br/>
           <span title="07:26:01 AM">
             69.3</span>
         </td>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">94%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">10 days, 22 hours, 17 minutes</td>
+      <td class="data">10 days, 22 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">10 days, 22 hours, 17 minutes</td>
+      <td class="data">10 days, 22 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
