--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/12/2020 01:09:00 PM</p>
+    <p class="lastupdate">09/12/2020 01:14:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">88.0&#176;F</td>
+        <td class="data">88.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">88.0&#176;F</td>
+        <td class="data">88.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">88.0&#176;F</td>
+        <td class="data">88.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">48.8&#176;F</td>
+        <td class="data">47.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">26%</td>
+        <td class="data">24%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.880 inHg (-0.083)</td>
+        <td class="data">29.881 inHg (-0.081)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph S (180&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">72.4&#176;F</td>
+        <td class="data">72.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="01:07:28 PM">
-            88.0</span><br/>
+          <span title="01:13:48 PM">
+            88.7</span><br/>
           <span title="07:15:43 AM">
             45.6</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="01:07:28 PM" class="hival">
-            88.0</span>
+          <span title="01:13:48 PM" class="hival">
+            88.7</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)" class="hival">
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="05:42:45 AM">
             86</span><br/>
-          <span title="01:03:30 PM">
-            26</span>
+          <span title="01:13:46 PM">
+            24</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:04:49 AM (Friday)">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          129
+          126
         </td>
         <td class="data new_row hilo_week">
           0<br/>
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="01:06:02 PM">
-            72.4</span><br/>
+          <span title="01:12:02 PM">
+            72.5</span><br/>
           <span title="07:26:01 AM">
             69.3</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">10 days, 22 hours, 22 minutes</td>
+      <td class="data">10 days, 22 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">10 days, 22 hours, 22 minutes</td>
+      <td class="data">10 days, 22 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
